# E3SM

./: CMakeLists.txt
.github/workflows/: eamxx-gh-clang-format.yml
cime/: tmp.patch
cime/scripts/lib/CIME/: build.py
cime/src/build_scripts/: buildlib.csm_share
cime/src/drivers/mct/main/: CMakeLists.txt
cmake/: CheckComponents.cmake  CheckUserInputs.cmake  GetCompsetComponents.cmake  SetCompilers.cmake  ValidateResolution.cmake
cmake/build_scripts/: BuildCsmShare.cmake  BuildE3SM.cmake  BuildGptl.cmake  BuildMct.cmake  BuildScorpio.cmake  BuildSharedLibs.cmake
cmake/config/: Compsets.cmake  Machines.cmake  Resolutions.cmake
cmake/config/compilers/: Gnu.cmake  gnu.cmake
cmake/config/machines/: linux-generic.cmake
cmake/tpls/: ProcessTPLs.cmake
cmake/utils/: genf90_utils.cmake
components/eamxx/src/share/field/: field_layout.cpp
components/homme/: CMakeLists.txt
components/homme/SC2020-artifacts/: README  collect.sh  coriknl-setup  summit-gpu-setup  summit-p9-setup
components/homme/SC2020-artifacts/cprnc-output-for-ne120-movies/: cprnc-output-branchxx-branchff  cprnc-output-masterff-branchff
components/homme/SC2020-artifacts/gpuanalysis/: HOW-TO-BUILD-AND-RUN
components/homme/SC2020-artifacts/gpuanalysis/ne16/: buildxx-gpumpi-nocudashare.sh  generate-script.sh  gettimes  ncu.sh  template.sh
components/homme/SC2020-artifacts/gpuanalysis/ne16/example-run16/ne16-machsummit-nnode1-nmax3/: ManualRoofline.section  job.sh  ncu.sh  xxinputHY.nl  xxinputNH.nl
components/homme/SC2020-artifacts/running-coriknl/: HOW-TO-BUILD-AND-RUN  buildxx.sh  euler-template.nl  generate-script.sh  gettimes  sl-template.nl  template.sh
components/homme/SC2020-artifacts/running-summit-gpu/: HOW-TO-BUILD-AND-RUN
components/homme/SC2020-artifacts/running-summit-gpu/ne1024/: buildxx-gpumpi-nocudashare.sh  generate-script.sh  template.sh
components/homme/SC2020-artifacts/running-summit-gpu/ne3072/: buildxx-gpumpi-nocudashare.sh  buildxx-gpumpi-yescudashare.sh  generate-script.sh  gettimes  template.sh
components/homme/SC2020-artifacts/running-summit-p9/: HOW-TO-BUILD-AND-RUN
components/homme/SC2020-artifacts/running-summit-p9/ne1024/: build-both-p9-omp.sh  generate-script.sh  template.sh
components/homme/SC2020-artifacts/sample-output/coriknl/ne1024-machcoriknl-nnode9216-nmax9216/: ff-eul-nh.nl  ff-sl-nh.nl  job.sh  slurm-ne1024-machcoriknl-nnode9216-nmax9216.30900976  time-ff-eul-nh-ne1024-machcoriknl-nnode9216-nmax9216.30900976  time-ff-sl-nh-ne1024-machcoriknl-nnode9216-nmax9216.30900976  time-xx-eul-nh-ne1024-machcoriknl-nnode9216-nmax9216.30900976  xx-eul-nh.nl
components/homme/SC2020-artifacts/sample-output/summit/gpu-run/: CMakeCache.txt-1584566003  KokkosCore_config.h-1584566003  env-1584566003
components/homme/SC2020-artifacts/sample-output/summit/gpu-run/ne1024-machsummit-nnode4600-nmax13800/: bsub-ne1024-machsummit-nnode4600-nmax13800.11628  job.sh  time-thetaNH-ne1024-machsummit-nnode4600-nmax13800.11628  xxinputHY.nl  xxinputNH.nl
components/homme/SC2020-artifacts/sample-output/summit/p9-run/: CMakeCache.txt-1584164744  KokkosCore_config.h-1584164744  env-1584164744  gitstat-1584164744
components/homme/SC2020-artifacts/sample-output/summit/p9-run/ne1024-machsummit-nnode3072-nmax768/: bsub-ne1024-machsummit-nnode3072-nmax768.11975  ffinputNH.nl  job.sh  time-thetaNH-ff-ne1024-machsummit-nnode3072-nmax768.11975  time-thetaNH-xx-ne1024-machsummit-nnode3072-nmax768.11975  xxinputNH.nl
components/homme/cmake/: HommeConfigOptions.cmake  HommeMacros.cmake  HommeProcessConfigOptions.cmake  HommeProcessTPLs.cmake  HommeSetCompilerFlags.cmake  HommeTargetMacros.cmake  HommeUtilsMacros.cmake  Kokkos.cmake  SetCompilerFlags.cmake
components/homme/src/preqx/share/: prim_advance_mod.F90  prim_state_mod.F90
components/homme/src/preqx_kokkos/: CMakeLists.txt  config.h.cmake.in  prim_driver_mod.F90
components/homme/src/share/: control_mod.F90  cube_mod.F90  gllfvremap_util_mod.F90  global_norms_mod.F90  interpolate_mod.F90  namelist_mod.F90  parallel_mod.F90  prim_driver_base.F90
components/homme/src/share/cxx/: CaarFunctor.cpp  CaarFunctor.hpp  CaarFunctorImpl.hpp  Context.hpp  ContextMemberBase.hpp  Dimensions.hpp  Element.cpp  Element.hpp  ElementGeometry.cpp  ElementGeometry.hpp  Elements.cpp  Elements.hpp  EulerStepFunctor.cpp  EulerStepFunctorImpl.hpp  ExecSpaceDefs.hpp  Hommexx_Session.cpp  HyperviscosityFunctor.cpp  HyperviscosityFunctor.hpp  HyperviscosityFunctorImpl.cpp  HyperviscosityFunctorImpl.hpp  KernelVariables.hpp  MultiElemKernelVariables.hpp  PpmRemapNew.hpp  PpmRemapOld.hpp  ReferenceElement.cpp  ReferenceElement.hpp  RemapFunctor.hpp  SimulationParams.hpp  SphereOperators.hpp  prim_cxx_driver_base.F90  prim_driver.cpp  prim_step.cpp
components/homme/src/share/cxx/mpi/: BoundaryExchange.cpp
components/homme/src/share/cxx/utilities/: GenericUtils.cpp  GenericUtils.hpp  LoopsUtils.hpp  MathUtils.hpp  RangeView.hpp  StaticArray.hpp  StdMeta.hpp  SubviewUtils.hpp
components/homme/src/theta-l-kokkos/: CMakeLists.txt  config.h.cmake.in  element_state.F90
components/homme/src/theta-l/share/: prim_advance_mod.F90  prim_state_mod.F90
components/homme/src/theta-l_kokkos/: CMakeLists.txt  prim_driver_mod.F90  theta_f2c_mod.F90
components/homme/src/theta-l_kokkos/cxx/: CaarFunctorImpl.hpp  DirkFunctorImpl.hpp  ElementsState.cpp  EquationOfState.hpp  HyperviscosityFunctorImpl.cpp  HyperviscosityFunctorImpl.hpp  cxx_f90_interface_theta.cpp  prim_advance_exp.cpp
components/homme/test/reg_test/namelists/: theta.nl
components/homme/test_execs/: CMakeLists.txt
components/homme/test_execs/preqx-nlev26-kokkos/: CMakeLists.txt
components/homme/test_execs/preqx-nlev72-kokkos/: CMakeLists.txt
components/homme/test_execs/share_kokkos_ut/: CMakeLists.txt  sphere_op_ml.cpp  sphere_op_sl.cpp
components/homme/test_execs/theta-l-nlev30-kokkos/: CMakeLists.txt
